fixed links position on small screens and path to donut

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ a {
 .links-container {
   margin: 0;
   position: absolute;
-  top: 34%;
+  top: 420px;
   left: 200px;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
